# Doki

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .golangci.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  push-to-gitlab.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.gitlab/issue_templates/: Bug.md  Feature.md
.gitlab/merge_request_templates/: Default.md
.windsurf/: extensions.json  settings.json
cmd/doki/: main.go
cmd/doki-compose/: main.go
cmd/doki-init/: main.go
cmd/doki-init-rust/: Cargo.toml
cmd/doki-init-rust/src/: cmdline.rs  command.rs  init.rs  main.rs  signal.rs  vsock.rs
cmd/dokid/: main.go
cmd/dokitest/: main.go
cmd/regtest/: main.go
distros/: arch.yml  fedora.yml  opensuse.yml  rockylinux.yml  ubuntu.yml
internal/apparmor/: apparmor.go
internal/cgroups/: manager.go
internal/dokivm/: vmm.go  vsock.go
internal/fuse/: overlayfs.go
internal/namespaces/: manager.go
internal/proot/: manager.go
internal/seccomp/: seccomp.go
pkg/api/: metrics.go  middleware.go  server.go  tls.go
pkg/builder/: builder.go  builder_test.go  executor.go
pkg/cli/: commands.go  commands_test.go
pkg/common/: config.go  errors.go  types.go  utils.go  version.go
pkg/compose/: engine.go  engine_test.go
pkg/cri/: plugin.go
releases/: doki-init  doki-init-android-arm64  doki-init-linux-arm64  doki-init-linux-armv7  doki-init-rust-android-arm64  doki-proot-android-armv7  proot-android-arm64
test/: Dokifile  dokifile  fib.py
(+31 files in other folders)
