[package]
name = "doki-init-rust"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
description = "PID 1 init for Doki microVMs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
